--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -1,6 +1,6 @@
 en:
   blacklight:
-    application_name: 'Mathes Childrens Literature - M.E. Grenander Special Collections &amp; Archives'
+    application_name: 'Books - M.E. Grenander Special Collections &amp; Archives'
     search:
       form:
         submit: ''
